tests/ui/foreign_let.stderr
Error [E0009]: Jet does not use `let`
  --> tests/ui/foreign_let.jet:2:5
    |
  2 |     let count = 1;
    |     ^^^
 Why: a binding is `val` if it never changes, or `var` if it can
 Fix: replace `let` with `val`
