tests/ui/foreign_let.jet
fn main() {
    let count = 1;
    print(count);
}
